<resources>
    <string name="app_name">BudgieCoin</string>
    <string name="addTransactionLbl">Add Transaction</string>
    <string name="addAccountLbl">Add an Account</string>
    <string name="transactions">Transactions</string>
    <string name="accounts">Accounts</string>
    <string name="account">Account</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="lbl_open">Open</string>
    <string name="lbl_close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lbl_deleteAccount">Delete Account</string>
    <string name="lbl_deleteTransaction">Delete Transaction</string>
    <string name="lbl_createTransaction">Create a Transaction</string>
    <string name="lbl_updateTransaction">Update Transaction</string>
    <string name="msg_deleteAccount">Are you sure you want to delete this Account?</string>
    <string name="msg_deleteTransaction">Are you sure you want to delete this Transaction?</string>
    <string name="lbl_registration">Register</string>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="lbl_deleteUser">Delete User</string>
    <string name="lbl_deleteCurrentUser">Delete Current User</string>
    <string name="msg_deleteUser">Are you sure you want to delete this User?</string>

    <string name="timePickerSelection">00:00</string>
    <string name="datePickerSelection">00/00/0000</string>

    <!-- Menu Strings -->
    <string name="MainActivity">Home</string>
    <string name="ViewAccountBalances">View Account Balances</string>
    <string name="ViewTransactions">View Transactions</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>

    <!-- Button Strings -->
    <string name="pinLogin">Login with Pin</string>
    <string name="biometricLogin">Login with Biometrics</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="registerBtn">Register</string>
    <string name="deleteUserSummary">Permanently delete the user that is logged in.</string>

    <!-- Login Messages -->
    <string name="username">Username</string>
    <string name="pin">PIN</string>
    <string name="loginUsernameEmpty">Username cannot be empty!</string>
    <string name="loginPinIncorrect">Incorrect Pin Number!</string>
    <string name="loginUsernameIncorrect">Incorrect Username!</string>

    <!-- Hint Strings -->
    <string name="transactionName">Transaction Name</string>
    <string name="valueFloat">0.00</string>
    <string name="note">Note</string>
    <string name="accountName">Account Name</string>

    <!-- Toast Messages -->
    <string name="t_accountCreated">Account Created</string>
    <string name="t_accountCanceled">Account Creation Cancelled</string>
    <string name="t_accountError">Account Creation Error</string>
    <string name="t_transactionCreated">Transaction Created</string>
    <string name="t_transactionCanceled">Transaction Creation Cancelled</string>
    <string name="t_transactionError">Transaction Creation Error</string>
    <string name="t_transactionDeleted">Transaction Deleted</string>
    <string name="t_transactionUpdate">Transaction Updated</string>
    <string name="t_transactionUpdateCancelled">Transaction Update Cancelled</string>
    <string name="t_transactionUpdateError">Transaction Update Error</string>
    <string name="t_loginCreated">Welcome! Your new login has been created.</string>

    <!-- Preference Titles -->
    <string name="user">User Details</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="usernameNotValid">Username must be at least 3 characters!</string>
    <string name="pinNotValid">Pin must be at least 4 numbers!</string>

</resources>