<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText"
    >

    <item
        android:id="@+id/nav_home"
        android:title="@string/MainActivity" />
    <item
        android:id="@+id/nav_balance"
        android:title="@string/ViewAccountBalances" />
    <item
        android:id="@+id/nav_transactions"
        android:title="@string/ViewTransactions" />
    <item
        android:id="@+id/nav_add_transaction"
        android:title="@string/addTransactionLbl" />
    <item
        android:id="@+id/nav_add_account"
        android:title="@string/addAccountLbl" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/Settings" />
    <item
        android:id="@+id/nav_logout"
        android:title="@string/Logout" />

</menu>