<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/user">
        <EditTextPreference
            app:key="user-name"
            app:title="@string/username"
            />
        <EditTextPreference
            app:key="user-pin"
            android:title="@string/pin"
            android:inputType="number"
            />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/lbl_deleteUser">
        <Preference
            app:title="@string/lbl_deleteUser"
            android:key="user-id"
            android:summary="Permanently delete the user that is logged in."
            />

    </PreferenceCategory>

</PreferenceScreen>