<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <include layout="@layout/app_bar" android:id="@+id/appBar" />
    <RadioGroup
        android:layout_below="@id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transactionType"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <RadioButton
            android:id="@+id/radioBtnIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/income"
            android:buttonTint="@color/budgieAqua"
            />
        <RadioButton
            android:id="@+id/radioBtnExpense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expense"
            android:buttonTint="@color/red"
            />
    </RadioGroup>
    <EditText
        android:id="@+id/inputTransactionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transactionType"
        android:hint="@string/transactionName"
        android:layout_margin="15dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:onClick="showDatePickerDialog"
        android:layout_below="@+id/inputTransactionName"
        android:text="@string/datePickerSelection"
        android:layout_margin="15dp"
        android:paddingHorizontal="15dp"
        android:background="@color/budgiePurple"
        android:textColor="@color/budgieYellow"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/inputTransactionName"
        android:layout_toRightOf="@id/datePicker"
        android:text="@string/timePickerSelection"
        android:layout_margin="15dp"
        android:paddingHorizontal="15dp"
        android:background="@color/budgiePurple"
        android:textColor="@color/budgieYellow"
        />

    <Spinner
        android:id="@+id/accountSelectionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@id/timePicker"

        />
<!--
    <Button
        android:id="@+id/accountSelectionBtn"
        android:text="@string/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountSelectionSpinner"
        android:layout_margin="15dp"
        android:background="@color/budgiePurple"
        android:textColor="@color/budgieYellow"
        />
-->
    <EditText
        android:id="@+id/inputTransactionValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountSelectionSpinner"
        android:layout_margin="15dp"
        android:layout_marginBottom="30dp"
        android:inputType="numberDecimal"
        android:hint="@string/valueFloat"
        />

    <EditText
        android:id="@+id/inputTransactionNote"
        android:layout_width="match_parent"
        android:layout_below="@id/inputTransactionValue"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:inputType="textMultiLine"
        android:hint="@string/note"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputTransactionNote"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="25dp"
            >
            <Button
                android:id="@+id/btnSaveTransaction"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btnSave"
                android:onClick="saveTransaction"
                android:layout_gravity="left"
                android:background="@color/budgiePurple"
                android:textColor="@color/budgieYellow"
                />
            <Button
                android:id="@+id/btnCancelTransaction"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/btnCancel"
                android:onClick="returnHome"
                android:layout_gravity="right"
                android:background="@color/budgiePurple"
                android:textColor="@color/budgieYellow"
                />
        </LinearLayout>


</RelativeLayout>