<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

            <Button
                android:id="@+id/btnAddTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/addTransactionLbl"
                android:onClick="changeToTransaction"
                android:background="@color/budgieAqua"
                android:textColor="@color/budgieGrey"
                />

            <Button
                android:id="@+id/btnViewTransactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnAddTransaction"
                android:layout_margin="10dp"
                android:text="@string/ViewTransactions"
                android:onClick="changeToViewTransactions"
                android:background="@color/budgieAqua"
                android:textColor="@color/budgieGrey"
                />

            <Button
                android:id="@+id/btnViewAccounts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnViewTransactions"
                android:text="@string/ViewAccountBalances"
                android:layout_margin="10dp"
                android:onClick="changeToAccountsView"
                android:background="@color/budgieAqua"
                android:textColor="@color/budgieGrey"
                />
</RelativeLayout>
